@@ -3483,6 +3483,14 @@ $wgMessageStructure = array(
 		'version-software',
 		'version-software-product',
 		'version-software-version',
+		'version-entrypoints',
+		'version-entrypoints-header-entrypoint',
+		'version-entrypoints-header-url',
+		'version-entrypoints-articlepath',
+		'version-entrypoints-scriptpath',
+		'version-entrypoints-index-php',
+		'version-entrypoints-api-php',
+		'version-entrypoints-load-php',
 	),
 	'filepath' => array(
 		'filepath',
