@@ -40,6 +40,8 @@ production.
 * (bug 27757) new API command just for retrieving tokens (not page-based)
 * Added GitViewers hook for extensions using external git repositories to have a web-based
   repository viewer linked to from Special:Version.
+* (bug 35685) api.php URL and other entry point URLs are now listed on
+  Special:Version
 
 === Bug fixes in 1.20 ===
 * (bug 30245) Use the correct way to construct a log page title.
